--- a/templates/army.html
+++ b/templates/army.html
@@ -14,7 +14,23 @@
 {{/each}}
 {{/if}}
 
-{{> special-rules}}
+{{#if specialRules}}
+{{> card-with-margin}}
+<div class="card-header"><b>Special Rules</b></div>
+<div class="card-body">
+    <dl class="row">
+        {{#each specialRules}}
+        <dt class="col-sm-2">{{title}}</dt>
+        <dd class="col-sm-10">
+            {{#each description}}
+            <p class="card-text">{{this}}</p>
+            {{/each}}
+        </dd>
+        {{/each}}
+    </dl>
+</div>
+</div>
+{{/if}}
 
 <h2>{{army}} Army List</h2>
 <p>{{strategy}} {{initiative}} {{{armyRules}}}</p>
