New responsive layout

--- a/armylist.css
+++ b/armylist.css
@@ -30,3 +30,30 @@ h2 {
 .unit-name {
   font-weight: 550;
 }
+
+.stats-table td {
+  padding-right: 1.2rem;
+  padding-left: 0rem;
+  padding-top: 0.1rem;
+  padding-bottom: 0.1rem;
+}
+
+.stat-title {
+  color: #888888;
+}
+
+.stats-table > tbody > tr:first-child > td {
+  border: none;
+  font-size: 80%;
+  font-weight: 400;
+  color: #888888;
+}
+
+.stats-table > tbody > tr > td:last-child {
+  padding-right: 0;
+}
+
+.weapon-mode-join {
+  text-align: right;
+  font-style: italic;
+}
