--- a/templates/army.html
+++ b/templates/army.html
@@ -20,8 +20,8 @@
 <div class="card-body">
     <dl class="row">
         {{#each specialRules}}
-        <dt class="col-sm-2">{{title}}</dt>
-        <dd class="col-sm-10">
+        <dt class="col-md-2">{{title}}</dt>
+        <dd class="col-md-10">
             {{#each description}}
             <p class="card-text">{{this}}</p>
             {{/each}}
