Spelling and case sensitive

--- a/templates/army.html
+++ b/templates/army.html
@@ -17,7 +17,7 @@
 {{> special-rules}}
 
 <h2>{{army}} Army List</h2>
-<p>{{strategy}} {{initiative}} {{{armyRules}}}</p>
+<p>{{strategy}} {{Initiative}} {{{armyRules}}}</p>
 
 {{#each sections}}
 {{> card-with-margin}}
