--- a/templates/list.html
+++ b/templates/list.html
@@ -10,7 +10,11 @@
         <div class="col-sm-4 col-md-3 col-lg-2 text-center" style="margin-top: 15px">
             <a href="/content/list.html?race={{../abbreviation}}&list={{file}}">
                 <img class="img-responsive 	d-none d-sm-block" style="width:100%" src="{{img}}" alt="{{name}}"/>
-                <small><span class="d-none d-sm-inline">{{../name}}<br></span>{{name}}<br class="d-none d-sm-inline">{{status}}
+                <small>
+                    <span class="d-none d-sm-inline">{{../name}}<br></span>
+                    {{name}}
+                    <br class="d-none d-sm-inline">
+                    {{#if (not status "approved")}}<i>{{status}}</i>{{/if}}
                 </small>
             </a>
         </div>
