Fixed more links

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -9,7 +9,7 @@
             <ul class="dropdown-menu">
                 {{#each lists}}
                 <li><a class="dropdown-item"
-                       href="/content/list.html?race={{../abbreviation}}&list={{file}}">{{name}}</a></li>
+                       href="content/list.html?race={{../abbreviation}}&list={{file}}">{{name}}</a></li>
                 {{/each}}
             </ul>
         </li>
