--- a/templates/list.html
+++ b/templates/list.html
@@ -8,7 +8,7 @@
         <div class="col-12 d-block d-sm-none"><h5>{{name}}</h5></div>
         {{#each lists}}
         <div class="col-sm-4 col-md-3 col-lg-2 text-center" style="margin-top: 15px">
-            <a href="/content/list.html?race={{../abbreviation}}&list={{file}}">
+            <a href="content/list.html?race={{../abbreviation}}&list={{file}}">
                 <img class="img-responsive 	d-none d-sm-block" style="width:100%" src="{{img}}" alt="{{name}}"/>
                 <small>
                     <span class="d-none d-sm-inline">{{../name}}<br></span>
