--- a/templates/units.html
+++ b/templates/units.html
@@ -56,6 +56,7 @@
                         {{#if @last}}<i>{{this}}</i>.{{/if}}
                         {{/each}}
                         {{notes}}
+                        {{#if crit}}<b>Critical hit effect:</b> {{crit}}{{/if}}
                     </small>
                 </div>
             </div>
