--- a/templates/list.html
+++ b/templates/list.html
@@ -5,11 +5,11 @@
 <div class="container">
     <div class="row">
         {{#each index}}
-        <div class="col-12 d-block d-sm-none"><h5>{{name}}</h5></div>
+        <div class="col-12 d-block d-sm-none text-center" style="margin-top: 15px"><h5>{{name}}</h5></div>
         {{#each lists}}
-        <div class="col-sm-4 col-md-3 col-lg-2 text-center" style="margin-top: 15px">
+        <div class="col-6 col-sm-4 col-md-3 col-lg-2 text-center" style="margin-top: 10px">
             <a href="content/list.html?race={{../abbreviation}}&list={{file}}">
-                <img class="img-responsive 	d-none d-sm-block" style="width:100%" src="{{img}}" alt="{{name}}"/>
+                <img class="img-responsive" style="width:100%" src="{{img}}" alt="{{name}}"/>
                 <small>
                     <span class="d-none d-sm-inline">{{../name}}<br></span>
                     {{name}}
