--- a/armylist.css
+++ b/armylist.css
@@ -6,6 +6,11 @@ h2 {
   margin-top: 1em;
 }
 
+h6 {
+  margin-top: 1.5rem;
+  font-weight: bold;
+}
+
 .unit-row-odd {
   background-color: white;
 }
