Special rules can now be fetched from the army specific or global specialRules.json file. Improved special rules padding to eliminate the need for empty paragraphs. Added some color to the page ;)

--- a/partials/special-rules.html
+++ b/partials/special-rules.html
@@ -2,10 +2,10 @@
 <div class="card" style="margin-top: .8rem">
     <div class="card-header"><b>Special Rules</b></div>
     <div class="card-body">
-        <dl class="row">
+        <dl class="row special-rules-table">
             {{#each specialRules}}
-            <dt class="col-lg-2">{{title}}</dt>
-            <dd class="col-lg-10">
+            <dt class="col-lg-2 special-rules-row">{{title}}</dt>
+            <dd class="col-lg-10 special-rules-row">
                 {{#each description}}
                 <p class="card-text">{{this}}</p>
                 {{/each}}
