--- a/armylist.css
+++ b/armylist.css
@@ -36,6 +36,13 @@ h6 {
   font-weight: 550;
 }
 
+.card-header {
+  padding: .75rem 1.25rem;
+  margin-bottom: 0;
+  background-color: rgba(230,247,255,1);
+  border-bottom: 1px solid rgba(0,0,0,.125);
+}
+
 .stats-table td {
   padding-right: 1.2rem;
   padding-left: 0rem;
@@ -65,4 +72,12 @@ h6 {
 
 .dropdown-toggle.active-dropdown::after {
   transform: rotate(-90deg);
+}
+
+.special-rules-row {
+  margin-bottom: 20px;
+}
+
+.special-rules-table {
+  margin-bottom: 0px;
 }
