Unit table header is now blue

--- a/armylist.css
+++ b/armylist.css
@@ -32,6 +32,10 @@ h6 {
   padding-top: .15rem;
 }
 
+.unit-table-header {
+  background-color: rgba(230,247,255,1);
+}
+
 .unit-name {
   font-weight: 550;
 }
