--- a/templates/units.html
+++ b/templates/units.html
@@ -6,7 +6,7 @@
 <table class="table">
     <thead>
     <tr>
-        <th scope="col">
+        <th scope="col" class="unit-table-header">
             <div class="row">
                 <div class="col-12 col-md-5">Units</div>
                 <div class="d-none d-md-inline col-md-7">Weapons</div>
