Started fixing the special rules

--- a/partials/special-rules.html
+++ b/partials/special-rules.html
@@ -7,7 +7,7 @@
             <dt class="col-lg-2 special-rules-row">{{title}}</dt>
             <dd class="col-lg-10 special-rules-row">
                 {{#each description}}
-                <p class="card-text">{{this}}</p>
+                <p class="card-text">{{{this}}}</p>
                 {{/each}}
             </dd>
             {{/each}}
