Removed space before the comma in weapon special rules

--- a/partials/weapons.html
+++ b/partials/weapons.html
@@ -11,10 +11,7 @@
         <td scope="row">{{#if join}}<i>{{join}}</i>{{else}}{{#if ../count}}{{../count}}x {{/if}}{{../name}}{{/if}}</td>
         <td>{{appendOnNumber range 'cm'}}</td>
         <td>
-            {{firepower}}
-            {{#each specialRules}}
-            , <i><abbr title="{{description}}">{{name}}</abbr></i>
-            {{/each}}
+            {{firepower}}{{#each specialRules}}, <i><abbr title="{{description}}">{{name}}</abbr></i>{{/each}}
         </td>
     </tr>
     {{/each}}
