Blood Angels overhaul & removed Imperial Fists support battery formation

--- a/templates/army.html
+++ b/templates/army.html
@@ -33,7 +33,7 @@
                         {{units}}
                         {{#if notes}}
                         <br>
-                        <small>{{notes}}</small>
+                        <small><b>Note:</b> {{{notes}}}</small>
                         {{/if}}
                     </div>
                     <div class="col-3 order-lg-9" style="text-align: right">
