Attempt to fix list-view to armyforge link

--- a/templates/army.html
+++ b/templates/army.html
@@ -2,7 +2,7 @@
 <p>
     <small>Version {{version}} - {{release}}</small>
     {{#if armyforge}}
-    <br><small><b>Armyforge:</b> <a href="https://magnusdurr.github.io/snapfire/chooser.html?list={{armyforge}}" target="_blank" class="external">{{army}}</a></small>
+    <br><small><b>Armyforge:</b> <a href="../snapfire/chooser.html?list={{armyforge}}" target="_blank" class="external">{{army}}</a></small>
     {{/if}}
 </p>
 
